--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -52,5 +52,51 @@ $navbar-dropdown-item-hover-color: white; $navbar-dropdown-item-hover-background
 $content-blockquote-background-color: $grey-dark;
 $content-blockquote-border-left: 0px;
 $content-blockquote-padding: 7rem;
+
+// Widths
+$width-tiny: 240px; //4bits
+$width-small: 480px; //6bits
+$width-medium: 600px; //8bits
+$width-wide: 800px; //10bits
+$width-ultra-wide: 960px; //12bits
+$width-extra-ultra-wide: 1400px;
+
+$condensed-titles: proxima-nova-condensed;
+
+// Responsive mixin for bubbled media-querries
+@mixin responsive($width){
+  @if $width == tiny-screens{
+    @media screen and (min-width: $width-tiny){
+      @content;
+    }
+  }
+  @else if $width == small-screens{
+    @media screen and (min-width: $width-small){
+      @content;
+    }
+  }
+  @else if $width == medium-screens{
+    @media screen and (min-width: $width-medium){
+      @content;
+    }
+  }
+  @else if $width == wide-screens{
+    @media screen and (min-width: $width-wide){
+      @content;
+    }
+  }
+  @else if $width == ultra-wide-screens{
+    @media screen and (min-width: $width-ultra-wide){
+      @content;
+    }
+  }
+    @else if $width == extra-ultra-wide-screens{
+      @media screen and (min-width: $width-extra-ultra-wide){
+        @content;
+      }
+    }
+}
+
 @import "bulma.sass";
 @import "layout.scss";
+
