--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
   <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://www.dai.com">
-      <svg viewBox="0 0 982 245" preserveAspectRatio="xMinYMax meet"><use xlink:href="#DAILightLogo"></use></svg>
+    <a class="navbar-item" href="/">
+      <svg viewBox="0 0 735 198" preserveAspectRatio="xMinYMax meet"><use xlink:href="#logo50"></use></svg>
     </a>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
