--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -96,6 +96,19 @@ $condensed-titles: proxima-nova-condensed;
       }
     }
 }
+@mixin clearfix {
+  *zoom: 1;
+
+  &:before,
+  &:after {
+    content: " ";
+    display: table;
+  }
+
+  &:after {
+    clear: both;
+  }
+}
 
 @import "bulma.sass";
 @import "layout.scss";
