--- a/_includes/svg-defs.html
+++ b/_includes/svg-defs.html
@@ -1,5 +1,18 @@
 <svg style="display: none;">
   <defs>
+    <g id="logo50" class="svg" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="fifty" fill-rule="nonzero">
+            <g id="Group" transform="translate(454.000000, 0.000000)" fill="#F2F2F2">
+                <path d="M75.5,63.7 C67.5,63.7 60.6,64.8 54.9,66.9 C53.5,67.4 51.9,68.2 50.1,69.1 L54.3,43.6 L129.2,43.6 L129.2,3.6 L20.2,3.6 L6.3,113.3 L46.6,115.2 L48,112.5 C50.3,108.1 53.6,105.2 57.9,103.7 C60.6,102.8 63.8,102.3 67.6,102.3 C75.1,102.3 80.5,104.7 83.9,109.8 C87.7,115.4 89.6,122.4 89.6,130.6 C89.6,138.9 87.6,145.9 83.6,151.2 C79.9,156.2 74.6,158.6 67.3,158.6 C60.9,158.6 56.4,157 53.3,153.8 C50,150.3 47.6,145 46.4,138.3 L45.7,134.4 L0.9,134.4 L1.3,139.6 C2.6,157.9 9.5,172.3 21.5,182.4 C33.4,192.4 48.8,197.4 67.2,197.4 C90.1,197.4 107.6,190.1 119.2,175.8 C130.6,161.8 136.4,145.6 136.4,127.8 C136.4,107.2 130.2,91.1 118,80.1 C106,69.2 91.7,63.7 75.5,63.7 Z" id="Path"></path>
+                <path d="M265.6,26.9 L265.6,26.9 C255.4,9 237.6,0 212.7,0 C187.8,0 170,9 159.8,26.9 C150.1,43.9 145.2,68 145.2,98.7 C145.2,129.4 150.1,153.5 159.8,170.4 C170,188.1 187.8,197.1 212.7,197.1 C237.6,197.1 255.4,188.1 265.6,170.4 C275.3,153.5 280.2,129.4 280.2,98.7 C280.2,68 275.3,43.8 265.6,26.9 Z M196.2,51.5 C199,43 204.2,39 212.7,39 C221.2,39 226.3,43 229,51.4 C232.1,61.4 233.7,77.3 233.7,98.6 C233.7,118.9 232.1,134.6 228.9,145.2 C226.2,154.2 221.1,158.4 212.6,158.4 C204.2,158.4 198.9,154.2 196.1,145.2 C192.8,134.6 191.2,119 191.2,98.7 C191.3,77.4 193,61.5 196.2,51.5 Z" id="Shape"></path>
+            </g>
+            <g id="Group" transform="translate(0.000000, 6.000000)" fill="#F2F2F2">
+                <path d="M54.6,142 L64.8,142 C100.8,141.2 115.1,127.2 115.1,90.7 C115.1,57.5 97.2,41.4 64.8,41.4 L54.6,41.4 L54.6,142 Z M0,0.5 L73.2,0.5 C129.1,0.5 162.6,34.5 162.6,90.9 C162.6,150.7 128.6,182.9 73.2,182.9 L0,182.9 L0,0.5 Z" id="Shape"></path>
+                <rect id="Rectangle" x="369.7" y="0.5" width="54.6" height="182.4"></rect>
+                <path d="M235.1,114.9 L276.5,114.9 L256.3,51 L255.8,51 L235.1,114.9 Z M227.4,0.5 L285.7,0.5 L353.9,182.9 L298.9,182.9 L287.7,150.2 L224.1,150.2 L212.6,182.9 L159.2,182.9 L227.4,0.5 Z" id="Shape"></path>
+            </g>
+        </g>
+    </g>
     <g class="svg" id="DAILightLogo" fill-rule="nonzero">
       <polygon id="Rectangle-1" points="0 0 0 74 371 74 371 0"></polygon>
       <polygon id="Rectangle-1-copy" points="0 85 0 159 371 159 371 85"></polygon>
