--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -26,6 +26,7 @@ p{
   }
   svg{
     width: 6rem;
+    height: 1.625rem;
     fill: white;
   }
 }
@@ -50,6 +51,7 @@ h1, h2{
     border: 0;
     border-bottom: 5px solid;
     margin-top: 1rem;
+    text-align: left;
   }
   &.is-size-1 .bar{
     width: 3rem;
