--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -101,8 +101,29 @@ blockquote{
 .navbar-item{
   text-transform: uppercase;
 }
+.hero-body{
+  background-image: url(/assets/images/banner.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 15rem;
+  @include responsive(medium-screens){
+    height: 20rem;
+  }
+  @include responsive(wide-screens){
+    height: 30rem;
+  }
+  @include responsive(ultra-wide-screens){
+    height: 40rem;
+  }
+  @include responsive(extra-ultra-wide-screens){
+    height: 50rem;
+  }
+}
 .feature-wrap{
   background-color: $grey-light;
+  padding-left: 2rem;
+  padding-right: 6rem;
 }
 .feature{
   padding: 2rem 0 4rem 0;
