--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,5 +1,7 @@
 // Bulma Overrides
-
+html{
+  scroll-behavior: smooth;
+}
 h1.title, h2.title, h3.title, h4.title, h5.title, h6.title{
   font-family: $family-primary;
   color: $grey-dark;
@@ -37,6 +39,15 @@ p{
   color: lightgray;
   position: relative;
   top: .95rem;
+}
+.navbar-menu.is-active{
+  .item-divider{
+    display: none;
+  }
+}
+.active-item{
+  background-color: $grey;
+  color: white;
 }
 .hero.is-light{ 
   color: $grey-dark;
@@ -193,4 +204,7 @@ blockquote{
 }
 iframe.timeline{
 
+}
+#timeline{
+  padding-top: 6rem;
 }
