--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -46,7 +46,10 @@ $navbar-item-hover-background-color: $grey;
 $navbar-item-hover-color: white;
 $navbar-dropdown-arrow: $grey-light;
 $navbar-dropdown-background-color: $grey-dark;
-$navbar-dropdown-item-hover-color: white; $navbar-dropdown-item-hover-background-color: $grey;
+$navbar-dropdown-item-hover-color: white; 
+$navbar-dropdown-item-hover-background-color: $grey;
+$navbar-item-active-background-color: $grey;
+$navbar-item-active-color: white;
 
 // blockquote variables
 $content-blockquote-background-color: $grey-dark;
