--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -56,7 +56,7 @@ p{
   }
 }
 
-h1, h2{
+h1, h2, h3{
   .bar {
     width: 2.1875rem;
     border: 0;
@@ -232,18 +232,25 @@ iframe.timeline{
 .card{
   margin: 1rem;
   float: left;
+  height: 393px;
+  width: 393px;
   background-color: white;
+  cursor: pointer;
   @include responsive(wide-screens){
     width: 350px;
+    height: 350px;
   }
   @include responsive(in-betweeny-screens){
     width: 300px;
+    height: 300px;
   }
   @include responsive(in-betweenyer-screens){
     width: 350px;
+    height: 350px;
   }
   @include responsive(extra-ultra-wide-screens){
     width: 418px;
+    height: 418px;
   }
 }
 
@@ -257,4 +264,5 @@ iframe.timeline{
 }
 .back{
   background-color: white;
+  min-height: 100%;
 }
