--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
   <div id="navbarBasicExample" class=" navbar-menu is-right is-primary">
     <div class="navbar-end" onclick="activeNav(event)">
 
-      <a href="/fifty-things" class="navbar-item {% if page.url contains "fifty-things"%}active-item {% endif %}">
+      <a href="/fifty-things-grid" class="navbar-item {% if page.url contains "fifty-things"%}active-item {% endif %}">
         50 Things
       </a>
         <span class="item-divider">|</span>
