--- a/_layouts/artifact.html
+++ b/_layouts/artifact.html
@@ -4,7 +4,7 @@ layout: default
 <section class="feature-wrap section">
   <div class="feature container">
     <div class="dai-box">
-      <h1 class="title is-size-2">{{page.title}}
+      <h1 class="title is-size-4-mobile is-size-2-desktop">{{page.title}}
         <hr class="bar">
       </h1>
       <div class="feature--detail">
