--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="/assets/js/site.js"></script>
     {% include svg-defs.html %}
   </head>
-  <body>
+  <body class="has-navbar-fixed-top">
   <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
@@ -37,17 +37,14 @@
         50 Things
       </a>
         <span class="item-divider">|</span>
-      <a class="navbar-item">
+      {%- comment -%} <a class="navbar-item">
         Our Mosaic
       </a>
-        <span class="item-divider">|</span>
+        <span class="item-divider">|</span> {%- endcomment -%}
       <a href="/#timeline" class="navbar-item">
         History
       </a>
-      <span class="item-divider">|</span>
-      <a href="" class="navbar-item">
-        Updates
-      </a>
+      {%- comment -%}    s {%- endcomment -%}
           {%- comment -%} <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           Updates
