--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
   <div id="navbarBasicExample" class=" navbar-menu is-right is-primary">
     <div class="navbar-end" onclick="activeNav(event)">
 
-      <a href="/fifty-things-grid" class="navbar-item {% if page.url contains "fifty-things"%}active-item {% endif %}">
-        50 Things
+      <a href="/mosaic" class="navbar-item {% if page.url contains "mosaic"%}active-item {% endif %}">
+        Our Mosaic
       </a>
         <span class="item-divider">|</span>
       {%- comment -%} <a class="navbar-item">
