--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -248,6 +248,10 @@ iframe.timeline{
   padding-top: 6rem;
 }
 
+
+.video-message{
+  margin-top: 3rem;
+}
 // FIFTY THINGS
 .hero-body.artifacts{
   background-color: #C8DAEB;
