--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
       <a href="/ceo-message" class="navbar-item {% if page.url contains "ceo-message"%}active-item {% endif %}">
         CEO Message
       </a>
+      <span class="item-divider">|</span>
       <a href="/mosaic" class="navbar-item {% if page.url contains "mosaic"%}active-item {% endif %}">
         Our Mosaic
       </a>
